# xfce4-alsa-plugin

./: .gitignore  CHANGELOG.md  README.md  alsa.desktop.in  alsa.desktop.in.in  meson.build  meson_options.txt  wscript
.github/workflows/: ci.yml
po/: POTFILES.in  meson.build  messages.po  ru.po
src/: alsamanager.vala  pluginsettings.vala  settings.vala  settingsdialog.vala  settingswindow.vala  volumebutton.vala  volumepopup.vala  xfce4-alsa-plugin.vala
src/vapi/: alsa.vapi  config.vapi  gdkkeysyms-2.0.vapi  libxfce4panel-1.0.vapi  libxfce4panel-2.0.deps  libxfce4panel-2.0.metadata  libxfce4panel-2.0.vapi
